tests/sksl/errors/RedeclareEnum.glsl
### Compilation failed:

error: 4: expected an identifier, but found type 'fragmentProcessor'
1 error
